...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GPt-NK-Y16">
                                                            <rect key="frame" x="0.0" y="60.5" width="364" height="32"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="32" id="adX-xt-tde"/>
                                                            </constraints>
                                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                            <state key="normal" title="Show More"/>
                                                            <connections>
                                                                <action selector="showMoreButton:" destination="ehS-4i-HTG" eventType="touchUpInside" id="48E-Sr-Z1n"/>
                                                            </connections>
                                                        </button>
                                                    </subviews>
                                                </stackView>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dx4-Bw-gX8">
                                <rect key="frame" x="20" y="54" width="374" height="147"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="itE-kH-XaJ">
                                        <rect key="frame" x="10" y="10" width="214" height="50"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wC-Su-7a4">
                                                <rect key="frame" x="0.0" y="0.0" width="214" height="19.5"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                <color key="textColor" red="0.27022320030000002" green="0.66327291730000004" blue="0.88093054289999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="98f-Eh-UHV">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cQ6-44-PD4">
                                        <rect key="frame" x="254" y="58" width="110" height="31"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="110" id="tVw-Eh-ABX"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Call"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="callButtonClicked:" destination="0ek-Ne-YgL" eventType="touchUpInside" id="Cuc-KB-81l"/>
                                        </connections>
...
