...
    override func viewDidLoad() {
        super.viewDidLoad()
        
       // labelClosedArea.isHidden = true
       // labelBedCount.isHidden = true
        
        self.title = "Hospitals"
        getData()
        
        tableView.dataSource = self
        tableView.delegate = self
        
}
...
